--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -28,6 +28,7 @@
 										{% endfor %}
 									</ul>
 					{% endif %}
+               
                {% if profile.address.all %}
                <h4 class="widget-title">Your Previous Address <strong>{{profile.address.count}}</strong></h4>
                <div class="row">
@@ -98,7 +99,7 @@
                         
                      
                      
-                     <button  class="btn btn-main  btn-round-full margin-top-20" type="submit">Procced To Payment</button>
+                     <button  class="btn btn-main  btn-round-full margin-top-20" type="submit" name="paymentPage">Procced To Payment</button>
                      
                      <button  class="btn btn-main  btn-round-full margin-top-20"  data-toggle="modal" data-target="#noEmail">आपके पास ईमेल नहीं है / Don't Have An Email?</button>
                   </form>
@@ -121,13 +122,29 @@
                         </div>
                      </div>
                      {% endfor %}
-                     <div class="discount-code">
-                        <p><small>Because You Deserve The Best | <span style="color:black; font-weight: 800;">SIXTH ELEMENT</span></small></p>
+                     <div class="discount-code" style=>
+
+                     {% if order.coupon_bool %}
+
+                        {% if order.coupon.order_items.all %}
+                           <div  style="border:1px solid green;  background:#CAF7B8; opacity:0.5;  display:flex; justify-content:space-between; padding:0 10px; align-items:center;" >
+                              
+                              <p style="color:#004D00;  font-size:1.5rem; margin-top:5px;"><strong><i class="fas fa-tags" style="color:#004D00; "></i> <small>{{code.tag}} applied! {{code.amount}}% off</small></strong></p>
+                              
+                              
+                              <a href="{% url 'remove-Coupon' order.id %}" ><i class="fas fa-times" style="color:#004D00; "></i></i></a>
+                           </div>
+                        {% endif %}
+                     
+                     {% else %}
+                        <p><a href="" data-toggle="modal" data-target="#coupon"><strong><u>Have a Coupon?</u></strong></a></p>
+                     {% endif %}
+                     
                      </div>
                      
                      <div class="summary-total">
                         <span>Total</span>
-                        <span>₹{{order.get_total_amount|intcomma}}</span>
+                        <span>₹{{order.final_amount|intcomma}}</span>
                      </div>
                      <div class="verified-icon">
                         <img src="{% static 'verified.png'%}">
@@ -140,15 +157,38 @@
    </div>
 </div>
    <!-- Modal -->
-   <div class="modal fade" id="coupon-modal" tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-         <div class="modal-content">
-            <div class="modal-body">
-               
-            </div>
-         </div>
-      </div>
-   </div>
+			<div class="modal  fade" id="coupon">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<i class="tf-ion-close"></i>
+				</button>
+				<div class="modal-dialog " role="document">
+					<div class="modal-content">
+						<div class="modal-body">
+							<div class="row">
+								<div class="col-md-12 col-sm-12 col-xs-12">
+									<div class="modal-image">
+										<form method="post" action=""> {% csrf_token %}
+                                 <input type="text" class="form-control" placeholder="Enter Code" name="coupon_code" />
+                                 <button class="btn btn-main btn-small btn-round-full"  type="submit" name="couponAdd" style="margin-top:2rem;">Submit</button>
+                              </form>
+									</div>
+								</div>
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<div class="product-short-details">
+										<h2 class="product-title"></h2>
+										<div class='d-inline justify-content-center mt-20'>
+											
+											
+										</div>
+										
+										
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><!-- /.modal -->
 
 
 			<!-- Modal -->
