--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -13,54 +13,54 @@
 									<ul class="messages">
 										{% for message in messages %}
 											{% if message.tags == 'warning' %}
-												
+
                         <div class="alert alert-danger alert-common alert-dismissible" role="alert">
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                          <i class="tf-ion-close-circled"></i><span>No User Record Found!</span> 
+                          <i class="tf-ion-close-circled"></i><span>No User Record Found!</span>
                         </div>
 											{% elif message.tags == 'error' %}
-												
+
                         <div class="alert alert-danger alert-common alert-dismissible" role="alert">
                           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                          <i class="tf-ion-close-circled"></i><span>Select A Valid State</span> 
+                          <i class="tf-ion-close-circled"></i><span>Select A Valid State</span>
                         </div>
 											{% endif %}
 										{% endfor %}
 									</ul>
 					{% endif %}
-               
+
                {% if profile.address.all %}
                <h4 class="widget-title">Your Previous Address <strong>{{profile.address.count}}</strong></h4>
                <div class="row">
-                  
+
                   {% for i in profile.address.all %}
                   <div class="col-md-4 col-sm-6 col-xs-12" >
                      <div class="pricing-item text-center" style="border:1px solid #D3D3D3; border-radius:10px; background:#D9D9DB;">
-                        
+
                         <!-- plan name & value -->
                         <div class="price-title">
                            <h3>{{i.name}}</h3>
-                           
+
                            <p>{{i.home}}</p>
                            <strong class="value">{{i.phone}}</strong><br>
                            <strong class="value">{{i.email}}</strong>
-                           
+
                         </div>
                         <!-- /plan name & value -->
-                        
+
                         <!-- plan description -->
                         <ul>
                            <li><i class="tf-ios-arrow-forward"></i> {{i.state}}</li>
                         </ul>
                         <br>
                         <a class="btn btn-main btn-round-full btn-small" style="margin-bottom:0.5rem;" href="{% url 'payment' i.id %}">Use This Address</a>
-                        
-                        
+
+
                      </div>
                   </div>
                   {% endfor %}
-               </div> 
-               
+               </div>
+
                {% endif %}
                <hr>
                <div class="block billing-details">
@@ -78,33 +78,33 @@
                      </div>
                      <div class="checkout-country-code clearfix">
                         <div class="form-group">
-                           
+
                            <label for="full_name">Email </label>
 
                            {% render_field form.email type="text" class="form-control"  %}
-                           
+
                         </div>
                         <div class="form-group" >
-                           
-                           
+
+
                            {% render_field form.state  class="form-control" style="height:5rem;"  %}
                         </div>
                      </div>
-                     
-                    
+
+
                         <div class="form-group">
                            <label for="full_name">Address</label>
                            {% render_field form.street_address type="text" class="form-control" %}
                         </div>
-                        
-                     
-                     
+
+
+
                      <button  class="btn btn-main  btn-round-full margin-top-20" type="submit" name="paymentPage">Procced To Payment</button>
-                     
+
                      <button  class="btn btn-main  btn-round-full margin-top-20"  data-toggle="modal" data-target="#noEmail">आपके पास ईमेल नहीं है / Don't Have An Email?</button>
                   </form>
                </div>
-               
+
             </div>
             <div class="col-md-4">
                <div class="product-checkout-details">
@@ -122,26 +122,26 @@
                         </div>
                      </div>
                      {% endfor %}
-                     <div class="discount-code" style=>
+                     <div class="discount-code" style='background: linear-gradient(to right , #E9E4F0 , #D3CCE3); border-radius:10px;'>
 
                      {% if order.coupon_bool %}
 
                         {% if order.coupon.order_items.all %}
                            <div  style="border:1px solid green;  background:#CAF7B8; opacity:0.5;  display:flex; justify-content:space-between; padding:0 10px; align-items:center;" >
-                              
+
                               <p style="color:#004D00;  font-size:1.5rem; margin-top:5px;"><strong><i class="fas fa-tags" style="color:#004D00; "></i> <small>{{code.tag}} applied! {{code.amount}}% off</small></strong></p>
-                              
-                              
+
+
                               <a href="{% url 'remove-Coupon' order.id %}" ><i class="fas fa-times" style="color:#004D00; "></i></i></a>
                            </div>
                         {% endif %}
-                     
+
                      {% else %}
-                        <p><a href="" data-toggle="modal" data-target="#coupon"><strong><u>Have a Coupon?</u></strong></a></p>
+                        <p><a href="" data-toggle="modal" data-target="#coupon" style="padding-left:10px;"><strong><u>Have a Coupon?</u></strong></a></p>
                      {% endif %}
-                     
+
                      </div>
-                     
+
                      <div class="summary-total">
                         <span>Total</span>
                         <span>₹{{order.final_amount|intcomma}}</span>
@@ -177,11 +177,11 @@
 									<div class="product-short-details">
 										<h2 class="product-title"></h2>
 										<div class='d-inline justify-content-center mt-20'>
-											
-											
+
+
 										</div>
-										
-										
+
+
 									</div>
 								</div>
 							</div>
@@ -209,11 +209,11 @@
 									<div class="product-short-details">
 										<h2 class="product-title"></h2>
 										<div class='d-inline justify-content-center mt-20'>
-											
-											<h2 class="">Call Us At: <br> +91-8851661538</h2>	
+
+											<h2 class="">Call Us At: <br> +91-8851661538</h2>
 										</div>
-										
-										
+
+
 									</div>
 								</div>
 							</div>
