--- a/templates/about.html
+++ b/templates/about.html
@@ -37,42 +37,42 @@
 	</div>
 </section>
 
-<section class="team-members " style="margin-bottom: 2rem;">
-	<div class="container">
-		<div class="row">
-			<div class="title"><h2>Our Athletes</h2></div>
-		</div>
-		<div class="row">
-			
-			<div class="col-md-3">
-				<div class="team-member text-center">
-					<a href="https://www.instagram.com/ravipawar_official/"><img class="img-circle" src="{% static 'img/ravi_athlete.png' %}" width="250"></a>
-					<a href="https://www.instagram.com/ravipawar_official/"><h4>Ravi Pawar</h4></a>
-					<a href="https://www.instagram.com/ravipawar_official/"><p>Ambassador</p></a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="team-member text-center">
-					<a href="https://www.instagram.com/sehrawat23deepak/"><img class="img-circle" src="{% static 'img/deepak_athlete.png' %}" width="250"></a>
-					<a href="https://www.instagram.com/sehrawat23deepak/"><h4>Deepak Sehrawat</h4></a>
-					<a href="https://www.instagram.com/sehrawat23deepak/"><p>Ambassador</p></a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="team-member text-center">
-					<a href="https://www.instagram.com/monudagar07/"><img class="img-circle" src="{% static 'img/monu_athlete.png' %}" width="250"></a>
-					<a href="https://www.instagram.com/monudagar07/"><h4>Monu Dagar</h4></a>
-					<a href="https://www.instagram.com/monudagar07/"><p>Ambassador</p></a>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="team-member text-center">
-					<img class="img-circle" src="https://thumbs.dreamstime.com/b/default-avatar-profile-vector-user-profile-default-avatar-profile-vector-user-profile-profile-179376714.jpg" width="250">
-					<h4>You Can Be Next</h4>
-					<p>Ambassador</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<!--<section class="team-members " style="margin-bottom: 2rem;">-->
+<!--	<div class="container">-->
+<!--		<div class="row">-->
+<!--			<div class="title"><h2>Our Athletes</h2></div>-->
+<!--		</div>-->
+<!--		<div class="row">-->
+<!--			-->
+<!--			<div class="col-md-3">-->
+<!--				<div class="team-member text-center">-->
+<!--					<a href="https://www.instagram.com/ravipawar_official/"><img class="img-circle" src="{% static 'img/ravi_athlete.png' %}" width="250"></a>-->
+<!--					<a href="https://www.instagram.com/ravipawar_official/"><h4>Ravi Pawar</h4></a>-->
+<!--					<a href="https://www.instagram.com/ravipawar_official/"><p>Ambassador</p></a>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-md-3">-->
+<!--				<div class="team-member text-center">-->
+<!--					<a href="https://www.instagram.com/sehrawat23deepak/"><img class="img-circle" src="{% static 'img/deepak_athlete.png' %}" width="250"></a>-->
+<!--					<a href="https://www.instagram.com/sehrawat23deepak/"><h4>Deepak Sehrawat</h4></a>-->
+<!--					<a href="https://www.instagram.com/sehrawat23deepak/"><p>Ambassador</p></a>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-md-3">-->
+<!--				<div class="team-member text-center">-->
+<!--					<a href="https://www.instagram.com/monudagar07/"><img class="img-circle" src="{% static 'img/monu_athlete.png' %}" width="250"></a>-->
+<!--					<a href="https://www.instagram.com/monudagar07/"><h4>Monu Dagar</h4></a>-->
+<!--					<a href="https://www.instagram.com/monudagar07/"><p>Ambassador</p></a>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="col-md-3">-->
+<!--				<div class="team-member text-center">-->
+<!--					<img class="img-circle" src="https://thumbs.dreamstime.com/b/default-avatar-profile-vector-user-profile-default-avatar-profile-vector-user-profile-profile-179376714.jpg" width="250">-->
+<!--					<h4>You Can Be Next</h4>-->
+<!--					<p>Ambassador</p>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
+<!--</section>-->
 {% endblock content %}
