--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,8 @@
 			<div class="col-md-6">
 				<div class="category-box category-box-2">
 					<a href="{% url 'shop' %}">
-						<img src="{% static 'poster_master.jpeg' %}" alt="" />
+<!--						<img src="{% static 'poster_master.jpeg' %}" alt="" />-->
+						<img src="{% static 'left_new.jpeg' %}" alt="" />
 						<div class="content">
 							
 						</div>
@@ -88,7 +89,8 @@
 			<div class="col-md-6">
 				<div class="category-box category-box-2">
 					<a href="{% url 'aboutus' %}">
-						<img src="{% static 'banner.jpg' %}" alt="" />
+<!--						<img src="{% static 'banner.jpg' %}" alt="" />-->
+						<img src="{% static 'right_new.jpeg' %}" alt="" />
 						<div class="content">
 							
 						</div>
